--- a/index.html
+++ b/index.html
@@ -1,35 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Kids Story Maker</title>
+    <title>Kids Story AI Test</title>
 </head>
-<body style="font-family: Arial, sans-serif; padding: 20px;">
-  <h2>Tell me your story idea:</h2>
-  <textarea id="idea" rows="4" cols="40" placeholder="e.g. a robot who loves pancakes"></textarea><br><br>
-  <button onclick="makeStory()">Make Story</button>
-  
-  <h3>Your Story:</h3>
-  <div id="story" style="white-space: pre-wrap; background:#f0f0f0; padding:10px;"></div>
+<body>
+    <h1>Kids Story AI Test</h1>
+    <input type="text" id="prompt" placeholder="Enter a story idea" />
+    <button onclick="generateStory()">Generate Story</button>
+    <p id="story"></p>
 
-  <script>
-    async function makeStory() {
-      const idea = document.getElementById("idea").value;
-
-      const response = await fetch("https://api.openai.com/v1/chat/completions", {
-        method: "POST",
-        headers: {
-          "Content-Type": "application/json",
-          "Authorization": "Bearer YOUR_OPENAI_KEY_HERE
-        },
-        body: JSON.stringify({
-          model: "gpt-4o-mini",
-          messages: [{ role: "user", content: "Write a short fun kids story based on: " + idea }]
-        })
-      });
-
-      const data = await response.json();
-      document.getElementById("story").innerText = data.choices[0].message.content;
-    }
-  </script>
+    <script>
+        async function generateStory() {
+            const prompt = document.getElementById('prompt').value;
+            const response = await fetch('/generate-story', {
+                method: 'POST',
+                headers: {'Content-Type': 'application/json'},
+                body: JSON.stringify({prompt: prompt})
+            });
+            const data = await response.json();
+            document.getElementById('story').innerText = data.story;
+        }
+    </script>
 </body>
 </html>
